// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deserialize complex mdast tree derived from ./example.md 1`] = `
[
  {
    "children": [
      {
        "text": "Heading one",
      },
    ],
    "type": "h1",
  },
  {
    "children": [
      {
        "text": "Slate POC",
      },
    ],
    "type": "h2",
  },
  {
    "children": [
      {
        "text": "Slate is interesting, hopefully it'll work better than react-rte so we can have a better text editor. Some of the ",
      },
      {
        "i": true,
        "text": "benefits",
      },
      {
        "text": " of slate are:",
      },
    ],
    "type": "p",
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "text": "Total control over how everything works",
              },
            ],
            "type": "p",
          },
        ],
        "type": "li",
      },
      {
        "children": [
          {
            "children": [
              {
                "text": "Near AST level API where you can control the editor / content",
              },
            ],
            "type": "p",
          },
        ],
        "type": "li",
      },
      {
        "children": [
          {
            "children": [
              {
                "b": true,
                "text": "Actively",
              },
              {
                "text": " maintained",
              },
            ],
            "type": "p",
          },
        ],
        "type": "li",
      },
    ],
    "type": "ol",
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "text": "Apple",
              },
            ],
            "type": "p",
          },
        ],
        "type": "li",
      },
      {
        "children": [
          {
            "children": [
              {
                "text": "Kiwi",
              },
            ],
            "type": "p",
          },
        ],
        "type": "li",
      },
      {
        "children": [
          {
            "children": [
              {
                "text": "Strawberry",
              },
            ],
            "type": "p",
          },
        ],
        "type": "li",
      },
    ],
    "type": "ul",
  },
  {
    "children": [
      {
        "text": "Check out ",
      },
      {
        "children": [
          {
            "text": "my website",
          },
        ],
        "type": "a",
        "url": "https://jackhanford.com",
      },
    ],
    "type": "p",
  },
  {
    "children": [
      {
        "children": [
          {
            "text": "Always bet on javascript",
          },
        ],
        "type": "p",
      },
    ],
    "type": "blockquote",
  },
]
`;

exports[`Deserialize heading depth one to slate state object with {type: "heading-one", children: [{text: "hey"}]} 1`] = `
{
  "children": [
    {
      "text": "hey",
    },
  ],
  "type": "h1",
}
`;

exports[`Deserialize heading depth three to slate state object with {type: "heading-three", children: [{text: "heading three"}]} 1`] = `
{
  "children": [
    {
      "text": "heading three",
    },
  ],
  "type": "h3",
}
`;

exports[`Deserialize heading depth two to slate state object with {type: "heading-two", children: [{text: "heading two"}]} 1`] = `
{
  "children": [
    {
      "text": "heading two",
    },
  ],
  "type": "h2",
}
`;

exports[`inserts empty text block if no children are given 1`] = `
{
  "children": [
    {
      "text": "",
    },
  ],
  "type": "h1",
}
`;
